/*
 * LICENSE HERE
 */

syntax = "proto3";

import "common/entities.proto";

package bareos.restore;


service Restore {
  rpc ListSessions (ListSessionsRequest) returns (ListSessionsResponse);
  rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse);
  rpc DeleteSession (DeleteSessionRequest) returns (DeleteSessionResponse);

  // these functions will only work once the tree is created
  rpc ListFiles (ListFilesRequest) returns (stream bareos.common.File);
  rpc ChangeDirectory (ChangeDirectoryRequest) returns (ChangeDirectoryResponse);
  rpc ChangeMarkedStatus (ChangeMarkedRequest) returns (ChangeMarkedResponse);

  rpc Run (RunRequest) returns (RunResponse);
  rpc Cancel (CancelRequest) returns (CancelResponse);
}

message DeleteSessionRequest {
  bareos.common.SessionId session_id = 1;
};

message DeleteSessionResponse {
};

message ListSessionsRequest {
};

message ListSessionsResponse {
  repeated bareos.common.RestoreSession sessions = 1;
};

message CreateSessionRequest {
  bareos.common.JobId backup_job = 1;
  bool find_job_chain = 2;
};

message CreateSessionResponse {
  bareos.common.RestoreSession session = 1;
};

enum ReplaceType {
  REPLACE_TYPE_UNSPECIFIED = 0;
  ALWAYS = 1;
  NEVER = 2;
  IF_NEWER = 3;
  IF_OLDER = 4;
};

message RestoreOptions {
  optional bareos.common.JobId restore_job = 1;
  optional bareos.common.Client restore_client = 2;
  optional ReplaceType replace = 3;
  optional string restore_location = 4;
};

message RunRequest {
  bareos.common.SessionId session = 1;
  RestoreOptions restore_options = 2;
};

message RunResponse {
  bareos.common.Job job_id = 1;
}

message CancelRequest {
  bareos.common.SessionId session = 1;
};

message CancelResponse {}

message Path {
  string path = 1;
};

message ChangeDirectoryRequest {
  bareos.common.SessionId session = 1;
  // this path can be relative
  Path directory = 2;
}

message ChangeDirectoryResponse {
  Path current_directory = 1;
}

enum MarkAction {
  MARK_ACTION_UNSPECIFIED = 0;
  MARK = 1;
  UNMARK = 2;
};

message Regex {
  string regex = 1;
};

message ChangeMarkedRequest {
  bareos.common.SessionId session = 1;
  MarkAction action = 2;

  // mark/unmark everything under the current directory that matches the regex
  Regex filter = 3;
}

message ChangeMarkedResponse {
  // returns how many states were changed
  int64 affected_count = 1;
}

message ListFilesRequest {
  bareos.common.SessionId session = 1;
}


